# tokentracker

./: .gitignore  LICENSE  PRIVACY.md  README.md
TokenTracker/: CHANGELOG.md  LICENSE  TokenTracker-consumer.spec  build_consumer.py  main_consumer.py  pyproject.toml  version_info.txt
TokenTracker-extension/: README.md  build_extension.py  manifest.firefox.json  manifest.json  popup.html
TokenTracker-extension/src/: background.js  compat.js  content.js  gemini_usage_reader.js  popup.js  usage_reader.js
TokenTracker/src/tokentracker/core/: auth.py  browsers.py  config.py  counter.py  http.py  platform.py  secrets.py  server.py  updater.py
TokenTracker/src/tokentracker/ui/: dashboard.py  icon.py  setup.py  tray_browser.py
TokenTracker/tests/: test_browsers.py  test_config_autostart.py  test_dashboard.py  test_server.py  test_updater.py
