[project]
name = "tokentracker"
version = "0.1.0"
description = "Battery-style system tray widget for AI token usage"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "certifi>=2026.5.20",
    "keyring>=25.7.0",
    "pillow>=12.2.0",
    "pystray>=0.19.5",
    "requests>=2.34.2",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.20.0",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "pytest-timeout>=2.4.0",
    "tomli>=2.4.1",
]

[project.scripts]
tokentracker = "tokentracker.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tokentracker"]

[tool.uv]
package = true
